--- a/notebooks/cian_scraper_playground.ipynb
+++ b/notebooks/cian_scraper_playground.ipynb
@@ -156,6 +156,16 @@
     }
    },
    "id": "efc249c2314f4810"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "37bdece9a8cc68df"
   }
  ],
  "metadata": {
