--- a/notebooks/data_preprocessing_playground.ipynb
+++ b/notebooks/data_preprocessing_playground.ipynb
@@ -457,6 +457,16 @@
     }
    },
    "id": "e2a061e08088a351"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4312cfe3f52db484"
   }
  ],
  "metadata": {
